--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,9 +20,18 @@
           <div><%= sneaker.price %></div>
         </div>
       <% end %>
+      <div>
+        <% @sneaker.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+        <% end %>
+      </div>
+<% end %>
 
     </div>
   </div>
 
   <%= link_to 'Homepage', root_path %>
 </div>
+
+
+<h1>Show Test</h1>
