--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,25 @@
 <div class="container">
-  <div class="row">
-    <h2><%= @user.username.capitalize %></h2>
-    <div class="d-inline">
-      <p>
-        <h3>Rating</h3>
-        <h3>Review</h3>
-      </p>
-    <div class="container d-inline p-2">
-      <p>
-        <h2>My collections</h2>
-          <div class="btn btn-primary active">
-            <%= link_to 'Add new shoe', new_user_sneaker_path(@user, @sneaker) %>
-          </div>
-      </p>
-    </div>
-      <% @sneakers.each do |sneaker|%>
-        <div>
-          <div><%= sneaker.brand %></div>
-          <div><%= sneaker.price %></div>
-        </div>
-      <% end %>
+  <h2><%= @user.username %></h2>
+  <div class="d-flex justify-content-between">
+    <h3>Rating</h3>
+    <%= link_to 'reviews', "#" %>
+  </div>
+</div>
 
-    </div>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between">
+    <h3>My Collection</h3>
+    <%= link_to 'Add Sneaker', "#" %>
   </div>
 
-  <%= link_to 'Homepage', root_path %>
+  <div class="row">
+
+    <% @sneakers.each do |sneaker| %>
+      <div class="col-3">
+        <img src="#" alt="">
+        <h4><%= sneaker.brand %></h4>
+        <p>$<%= sneaker.price %></p>
+      </div>
+    <% end %>
+  </div>
 </div>
