--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     <%= link_to 'reviews', "#" %>
   </div>
 </div>
- 
+
 <div class="container mt-5">
   <div class="d-flex justify-content-between">
     <h3>My Collection</h3>
@@ -16,7 +16,7 @@
 
     <% @sneakers.each do |sneaker| %>
       <div class="col-3">
-        <img src="<%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>" alt="">
+        <%# <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
         <h4><%= sneaker.brand %></h4>
         <p>$<%= sneaker.price %></p>
       </div>
