--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,22 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="bg">
+  <div class="container">
+    <div class="username d-flex justify-content-end">
+      <% if user_signed_in? %>
+        <p class="light">
+        <h2>WELCOME <%= current_user.username.upcase %>!</h2>
+        </p>
+      <% end %>
+    </div>
+      <div class="arrivals">
+        <div class="row">
+          <div class="col-6">
+            <h1>THE NEW ARRIVALS</h1>
+            <button class="b">ORDER NOW</button>
+          </div>
+        </div>
+      </div>
+        <div class="brand-cards">
 
-<% if user_signed_in? %>
-  <%= current_user.email %>
-<% end %>
+        </div>
+  </div>
+</div>
