--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
         </p>
       <% end %>
     </div>
-      <div class="arrivals">
+      <div class="container arrivals">
         <div class="row">
           <div class="col-6">
             <h1>THE NEW ARRIVALS</h1>
@@ -15,8 +15,19 @@
           </div>
         </div>
       </div>
-        <div class="brand-cards">
 
+      <%# <div class="container">
+        <div class="row d-flex align-items-end">
+          <div class="col-3">
+            <div class="card-product">
+              <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+              <div class="card-product-infos">
+                <h2>Product name</h2>
+                <p>Product description with <strong>relevant info</strong> only.</p>
+              </div>
+            </div>
+          </div>
         </div>
+      </div> %>
   </div>
 </div>
