--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -24,10 +24,10 @@ body, html {
   linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
 'https://source.unsplash.com/updW-QUccFE');
 
-  // background-image: url("https://source.unsplash.com/updW-QUccFE");
-
   /* Full height */
-  height: 100%;
+  height: 100vh;
+  position: sticky;
+ top: 0;
 
   /* Center and scale the image nicely */
   background-position: center;
@@ -38,20 +38,20 @@ body, html {
 h1 {
   color: white;
   font-family: 'Roboto Mono', monospace;
-  font-size: 72px;
+  font-size: 64px;
   box-shadow: 8px;
 }
 
 h2 {
   color: white;
   font-family: 'Roboto Mono', monospace;
-  font-size: 48px;
+  font-size: 32px;
 }
 
 // Others
 
 .arrivals {
-  position: relative;
-  left: 150px;
-  top: 300px;
+  // position: relative;
+  // left: 20px;
+  // top: 100px;
 }
