--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,10 +1,14 @@
 .card-product {
   overflow: hidden;
   height: 120px;
-  background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+}
+
+.card-product::after {
+  background: rgb(187, 187, 187);
+  opacity: 0.7;
 }
 
 .card-product img {
