--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,10 +1,11 @@
+<%# Purchase page %>
 <h1>Confirm Purchase</h1>
 <br>
 <h2>Description</h2>
 <p> ======================== </p>
 <ul>
   <li>Sneaker ID: <%= @sneaker.id %></li>
-  <li><%= @sneaker.brand %>, size: <%= @sneaker.size %></li>
+  <li><%= @sneaker.brand %> <%= @sneaker.model %>, Size: <%= @sneaker.size %></li>
   <li>Price: $<%= @sneaker.price %></li>
 </ul>
 
