--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,9 @@
             <div class="card-product mt-5">
               <img src="https://source.unsplash.com/XPBYi4K8vFI" />
               <div class="card-product-infos">
-                <h2>Product name</h2>
+                <h2>
+                <%= link_to "Product Name", brands_sneakers_path %>
+                </h2>
                 <p>Product description with <strong>relevant info</strong> only.</p>
               </div>
             </div>
@@ -34,7 +36,9 @@
               <div class="card-product mt-5">
                 <img src="https://source.unsplash.com/kn7cfz5ESIE" />
                 <div class="card-product-infos">
-                  <h2>Product name</h2>
+                  <h2>
+                    <%= link_to "Product Name", brands_sneakers_path %>
+                  </h2>
                   <p>Product description with <strong>relevant info</strong> only.</p>
                 </div>
               </div>
@@ -44,7 +48,9 @@
                 <div class="card-product mt-5">
                   <img src="https://source.unsplash.com/Sw-pqjQfsO4" />
                   <div class="card-product-infos">
-                    <h2>Product name</h2>
+                    <h2>
+                        <%= link_to "Product Name", brands_sneakers_path %>
+                      </h2>
                     <p>Product description with <strong>relevant info</strong> only.</p>
                   </div>
                 </div>
@@ -53,7 +59,9 @@
                   <div class="card-product mt-5">
                     <img src="https://source.unsplash.com/HcqA34-uWo4" />
                     <div class="card-product-infos">
-                      <h2>Product name</h2>
+                      <h2>
+                        <%= link_to "Product Name", brands_sneakers_path %>
+                      </h2>
                       <p>Product description with <strong>relevant info</strong> only.</p>
                     </div>
                   </div>
