--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <%= link_to "COLLECTIONS", "#", class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "SIGN UP", new_user_session_path, class: "nav-link" %>
+          </li>
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <%= image_tag "https://source.unsplash.com/random/40x40", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
