--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
               <img src="https://source.unsplash.com/XPBYi4K8vFI" />
               <div class="card-product-infos">
                 <h2>
-                <%= link_to "Product Name", brands_sneakers_path %>
+                <%= link_to "Product Name", sneakers_path %>
                 </h2>
                 <p>Product description with <strong>relevant info</strong> only.</p>
               </div>
@@ -37,7 +37,7 @@
                 <img src="https://source.unsplash.com/kn7cfz5ESIE" />
                 <div class="card-product-infos">
                   <h2>
-                    <%= link_to "Product Name", brands_sneakers_path %>
+                    <%= link_to "Product Name", sneakers_path %>
                   </h2>
                   <p>Product description with <strong>relevant info</strong> only.</p>
                 </div>
@@ -49,7 +49,7 @@
                   <img src="https://source.unsplash.com/Sw-pqjQfsO4" />
                   <div class="card-product-infos">
                     <h2>
-                        <%= link_to "Product Name", brands_sneakers_path %>
+                        <%= link_to "Product Name", sneakers_path %>
                       </h2>
                     <p>Product description with <strong>relevant info</strong> only.</p>
                   </div>
@@ -60,7 +60,7 @@
                     <img src="https://source.unsplash.com/HcqA34-uWo4" />
                     <div class="card-product-infos">
                       <h2>
-                        <%= link_to "Product Name", brands_sneakers_path %>
+                        <%= link_to "Product Name", sneakers_path %>
                       </h2>
                       <p>Product description with <strong>relevant info</strong> only.</p>
                     </div>
