corrected brands path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
               <img src="https://source.unsplash.com/XPBYi4K8vFI" />
               <div class="card-product-infos">
                 <h2>
-                <%= link_to "Product Name", sneakers_path %>
+                <%= link_to "Brands Name", brands_sneakers_path %>
                 </h2>
                 <p>Product description with <strong>relevant info</strong> only.</p>
               </div>
