--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,9 +26,9 @@
           <li class="nav-item dropdown">
             <%= image_tag "https://source.unsplash.com/random/40x40", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My Profile", "#", class: "dropdown-item" %>
-              <%= link_to "My Collection", "#", class: "dropdown-item" %>
-              <%= link_to "My Transactions", "#", class: "dropdown-item" %>
+              <%= link_to "My Profile", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My Collection", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "My Transactions", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Settings", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
