--- a/app/views/sneakers/new.html.erb
+++ b/app/views/sneakers/new.html.erb
@@ -2,6 +2,7 @@
   <div class= "row" justify-content-center>
     <div class="mb-3">
     <%= simple_form_for [ @user, @sneaker ] do |f| %>
+        <%= f.input :brand %>
         <%= f.input :model %>
         <%= f.input :price %>
         <%= f.input :size %>
