--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Sneaker Page", sneakers_path %>
+<%= link_to "Sneaker Page", user_path(current_user) %>
 <div class="container">
   <div class="row">
 
