updated brand view page

--- a/app/views/sneakers/brand.html.erb
+++ b/app/views/sneakers/brand.html.erb
@@ -1,1 +1,9 @@
-brand
+<% @brands.each do |brand| %>
+  <h3>
+    Sneaker size:  <%= brand.size %>
+  </h3>
+  <h3>
+    Sneaker price: <%= brand.price %>
+  </h3>
+
+<% end %>
