Last Commit before Demo sigh...

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 
 
 
-  <div class="row">
+  <div class=".card-product">
     <% @sneakers.each do |sneaker| %>
       <div class="col-3">
         <% if sneaker.photos.attached? %>
