--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -8,7 +8,7 @@
           <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
           <% end %>
       <% end %>
-      <div class="card-sneaker-infos">
+      <div class="card-product imgs">
         <div>
           <h2>Brand:<%= @sneaker.brand %></h2>
           <p>Size:<%= @sneaker.size %></p>
