updated brands page and sneakers show

--- a/app/views/sneakers/brand.html.erb
+++ b/app/views/sneakers/brand.html.erb
@@ -1,9 +1,13 @@
 <% @brands.each do |brand| %>
+
   <h3>
     Sneaker size:  <%= brand.size %>
   </h3>
   <h3>
     Sneaker price: <%= brand.price %>
+  </h3>
+  <h3>
+    <%# <%= link_to "Show more", user_sneaker_path(@user, @sneaker) %>
   </h3>
 
 <% end %>
