removed show more from brand page

--- a/app/views/sneakers/brand.html.erb
+++ b/app/views/sneakers/brand.html.erb
@@ -7,6 +7,7 @@
     Sneaker price: <%= brand.price %>
   </h3>
   <h3>
+    <a href="#">Show more</a>
     <%# <%= link_to "Show more", user_sneaker_path(@user, @sneaker) %>
   </h3>
 
