--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-            <%= link_to "HOME", "#", class: "nav-link" %>
+            <%= link_to "HOME", root_path, class: "nav-link" %>
           </li>
              <li class="nav-item">
             <%= link_to "TRENDING", "#", class: "nav-link" %>
