edited home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,17 +29,13 @@
           <img src="https://source.unsplash.com/XPBYi4K8vFI" />
           <div class="card-product-infos">
             <h2>
-            <%= link_to "Brands Name", brand_sneakers_path(brand) %>
+            <%= link_to "Nike", brand_sneakers_path(brand) %>
             </h2>
             <p>Product description with <strong>relevant info</strong> only.</p>
           </div>
         </div>
       </div>
-
     <% end %>
-
     </div>
-
-
   </div>
 </div>
