--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,6 +5,7 @@
 @import "navbar";
 @import "button";
 @import "cards";
+@import "bg_card";
 
 // Import font family
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
@@ -16,23 +17,6 @@
 
 body, html {
   height: 100%;
-}
-
-.bg {
-  /* The image used */
-  background-image:
-  linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
-'https://source.unsplash.com/updW-QUccFE');
-
-  /* Full height */
-  height: 100vh;
-  position: sticky;
- top: 0;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 h1 {
