--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,48 @@
-<div class="container">
-  <h2><%= @user.username.capitalize %></h2>
-  <div class="d-flex justify-content-between">
-    <h3>Rating</h3>
-    <%= link_to 'reviews', "#" %>
-  </div>
-</div>
-
-<div class="container mt-5">
-  <div class="d-flex justify-content-between">
-    <h3>My Collection</h3>
-    <%= link_to 'Add Sneaker', new_user_sneaker_path(@user, @sneaker) %>
-  </div>
-
-
-
-  <div class="row">
-    <% @sneakers.each do |sneaker| %>
-      <div class="col-3">
-        <% if sneaker.photos.attached? %>
-          <% sneaker.photos.each do |photo| %>
-            <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
-            <% end %>
-        <% end %>
-        <h4><%= sneaker.brand %></h4>
-        <p><%= sneaker.model %></p>
-        <p>$<%= sneaker.price %></p>
-        <p><%= sneaker.size %></p>
-        <p><%= sneaker.condition %></p>
+<div class="user-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-3 pt-2">
+        <h2><%= @user.username.capitalize %></h2>
       </div>
-    <% end %>
+    </div>
+    <div class="row">
+      <div class="col-12 mt-3">
+        <div class="d-flex justify-content-between">
+          <h3>Rating</h3>
+          <%= link_to 'Reviews', "#" %>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="container mt-5">
+  <div class="row">
+    <div class="col-3">
+      <div class="d-flex justify-content-between">
+        <h3>My Collection</h3>
+        <%= link_to 'Add Sneaker', new_user_sneaker_path(@user, @sneaker) %>
+      </div>
+    </div>
+  </div>
+
+
+
+    <div class="row">
+      <% @sneakers.each do |sneaker| %>
+        <div class="col-3">
+          <% if sneaker.photos.attached? %>
+            <% sneaker.photos.each do |photo| %>
+              <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+              <% end %>
+          <% end %>
+          <h4><%= sneaker.brand %></h4>
+          <p><%= sneaker.model %></p>
+          <p>$<%= sneaker.price %></p>
+          <p><%= sneaker.size %></p>
+          <p><%= sneaker.condition %></p>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
