--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;700&display=swap');
 // font-family: 'Roboto Mono', monospace;
 
+// Standard Button
 .b {
   background-color: #f4511e;
   border: none;
@@ -13,6 +14,24 @@
   transition: 0.3s;
   font-family: 'Roboto Mono', monospace;
   border-radius: 8px;
+}
+
+.b:hover {opacity: 0.6}
+
+// Sneaker-card button
+.s-btn {
+  background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 1;
+  transition: 0.3s;
+  font-family: 'Roboto Mono', monospace;
+  border-radius: 32px;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .b:hover {opacity: 0.6}
