--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -31,3 +31,35 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+// Sneaker-card
+.sneaker-card {
+  width: 280px;
+  height: 460px;
+  background-color: aliceblue;
+  padding: 16px;
+  border-radius: 16px;
+  box-shadow: 16px;
+
+}
+#sneaker-image {
+  width: 280px;
+  height: 240px;
+  object-fit: cover;
+}
+.sneaker-card h2 {
+  font-size: 16px;
+  }
+
+.sneaker-card h2 {
+  font-size: 24px;
+  color: black;
+  display: inline-block;
+  white-space: nowrap;
+  }
+
+.sneaker-card h3 {
+  font-size: 16px;
+  display: inline-block;
+  white-space: nowrap;
+  }
