--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,6 +21,7 @@
 // Sneaker-card button
 .s-btn {
   background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+  text-decoration: none;
   border: none;
   color: white;
   padding: 16px 32px;
@@ -31,7 +32,7 @@
   font-family: 'Roboto Mono', monospace;
   border-radius: 32px;
   white-space: nowrap;
-  text-align: center;
+
 }
 
-.b:hover {opacity: 0.6}
+.s-btn:hover {opacity: 0.6}
