--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -42,11 +42,23 @@
   box-shadow: 16px;
 
 }
-#sneaker-image {
+#sneaker-card-image {
   width: 280px;
-  height: 240px;
+  height: 200px;
   object-fit: cover;
 }
+
+#sneaker-card-avator {
+  border-radius: 50%;
+  position: relative;
+  right: 32px;
+}
+
+#sneaker-card-price {
+  position: relative;
+  right: 64px;
+}
+
 .sneaker-card h2 {
   font-size: 16px;
   }
