--- a/app/views/sneakers/brand.html.erb
+++ b/app/views/sneakers/brand.html.erb
@@ -1,5 +1,7 @@
 <div class="user-bg">
   <h1>Brand: <%= @sneakers.last.brand %></h1>
+
+  <div class="container d-flex">
   <% @sneakers.each do |sneaker| %>
 
   <div class="container sneaker-card">
@@ -48,5 +50,7 @@
   </div>
 
   <% end %>
+
+  </div>
 
 </div>
