--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,6 +6,7 @@
 @import "button";
 @import "cards";
 @import "bg_card";
+@import "grid";
 
 // Import font family
 @import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
