--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,6 +14,7 @@
   transition: 0.3s;
   font-family: 'Roboto Mono', monospace;
   border-radius: 8px;
+  white-space: nowrap;
 }
 
 .b:hover {opacity: 0.6}
