--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,8 @@
     <div class="arrivals d-flex align-items-center mt-5 pt-5">
       <div class="row">
         <div class="col-6">
-          <h1>THE NEW ARRIVALS</h1>
-          <button class="b">ORDER NOW</button>
+          <h1>SneakerHeads</h1>
+          <button class="b">LASTEST ARRIVALS</button>
         </div>
       </div>
     </div>
@@ -29,7 +29,9 @@
           <img src="https://source.unsplash.com/XPBYi4K8vFI" />
           <div class="card-product-infos">
             <h2>
-            <%= link_to "Nike", brand_sneakers_path(brand) %>
+            <% count = 0 %>
+            <%= link_to brand, brand_sneakers_path(brand) %>
+            <% count+=1 %>
             </h2>
             <p>Product description with <strong>relevant info</strong> only.</p>
           </div>
