--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,16 +25,10 @@
     <% Sneaker::BRANDS.each do |brand| %>
 
       <div class="col-3">
-        <div class="card-product mt-5">
-          <img src="https://source.unsplash.com/XPBYi4K8vFI" />
-          <div class="card-product-infos">
-            <h2>
-            <% count = 0 %>
-            <%= link_to brand, brand_sneakers_path(brand) %>
+        <div class="brand-card"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/xyhMlUbwiQU)">
+          <% count = 0 %>
+          <h2><%= link_to brand, brand_sneakers_path(brand) %></h2>
             <% count+=1 %>
-            </h2>
-            <p>Product description with <strong>relevant info</strong> only.</p>
-          </div>
         </div>
       </div>
     <% end %>
