--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -81,7 +81,8 @@
 .brand-card {
     background-size: cover;
     background-position: center;
-    height: 180px;
+    height: 150px;
+    width: 230px;
     display: flex;
     justify-content: center;
     align-items: center;
