--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,22 +11,23 @@
       </div>
     </div>
 
-    <div class="arrivals d-flex align-items-center mt-5 pt-5">
+    <div class="arrivals d-flex align-items-center">
       <div class="row">
-        <div class="col-6">
+        <div class="col-9">
           <h1>SneakerHeads</h1>
-          <button class="b">LASTEST ARRIVALS</button>
+          <h2 class="mt-3">The Place Where SneakerHeads Gather</h2>
+          <button class="b mt-5">LASTEST ARRIVALS</button>
         </div>
       </div>
     </div>
 
 
-    <div class="row brands flex-container mt-5">
+    <div class="row brands flex-container">
       <% Sneaker::BRANDS.each do |brand| %>
         <div class="col-3">
           <div class="brand-card my-3"  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/7LXP4BaXvrY)">
             <% count = 0 %>
-            <h2 class="a"><%= link_to brand, brand_sneakers_path(brand) %></h2>
+            <h2 class="a"><%= link_to brand, brand_sneakers_path(brand)%></h2>
               <% count+=1 %>
           </div>
         </div>
