updated sneaker cards for brands page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -48,8 +48,9 @@
   object-fit: cover;
 }
 
-#sneaker-card-avator {
-  border-radius: 50%;
+#sneaker-card-avatar {
+  // width: 32px;
+  // border-radius: 50%;
   position: relative;
   right: 32px;
 }
