--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,4 +1,4 @@
-<%# Transaction success page %>
+<%# Transaction Successful page %>
 <div class="container">
   <div class="row">
     <div class="col-3">
@@ -38,7 +38,7 @@
     </div>
 
     <div class="row">
-       <%= link_to "Home", root_path %>
+       <%= link_to "My Collection", user_path(current_user) %>
     </div>
   </div>
 </div>
