--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -1,4 +1,4 @@
-
+<%# Sneaker Details page %>
 <div class="container">
   <div class="row">
     <div class="col-6">
@@ -23,8 +23,8 @@
       <h1><%= @sneaker.brand %></h1>
       <h2>$<%= @sneaker.price %></h2>
       <p>Size <%= @sneaker.size %></p>
-      <a> <%= link_to "Back To Browser", "#", class: "btn btn-gradient" %></a>
-      <a> <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class: "btn btn-gradient" %></a>
+      <%= link_to "Back To #{@sneaker.brand}", brand_sneakers_path(@sneaker.brand), class: "btn btn-gradient" %>
+      <%= link_to "Buy Now", new_sneaker_transaction_path(@sneaker), class: "btn btn-gradient" %>
     </div>
   </div>
   </div>
