--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%# My Collection page %>
 <div class="user-bg">
   <div class="container">
     <div class="row">
@@ -41,6 +42,11 @@
           <p>$<%= sneaker.price %></p>
           <p><%= sneaker.size %></p>
           <p><%= sneaker.condition %></p>
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <button class="s-btn"><%= link_to "View Details", user_sneaker_path(sneaker.user, sneaker) %></button>
+          </div>
         </div>
       <% end %>
     </div>
