--- a/app/views/sneakers/brand.html.erb
+++ b/app/views/sneakers/brand.html.erb
@@ -43,7 +43,7 @@
         <%# button %>
         <div class="row">
           <div class="col-6">
-            <button class="s-btn"><%= link_to "View Sneakers", sneakers_path(@sneaker) %></button>
+            <button class="s-btn"><%= link_to "View Details", user_sneaker_path(sneaker.user, sneaker) %></button>
           </div>
         </div>
       </div>
