--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,44 +1,118 @@
-<%# Transaction Successful page %>
-<div class="container">
-  <div class="row">
-    <div class="col-3">
-      <img src="#" alt="carousel gallery">
+<div class="transaction-bg">
+  <div class="container">
+    <div class="row">
+      <%# photo of transacted shoe %>
+      <div class="col-6">
+        <img src="https://source.unsplash.com/NoVnXXmDNi0" alt="carousel gallery">
+      </div>
+      <%# transaction details %>
+      <div class="col-6">
+        <div class="container">
+          <%# Transaction id %>
+          <div class="row">
+            <div class="col-6">
+              <h2>Transaction No: <%= @transaction.id %></h2>
+            </div>
+          </div>
+          <%# Model %>
+           <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Model:</h3>
+            </div>
+            <div class="col-5">
+              <h3><%= @sneaker.model %></h3>
+            </div>
+          </div>
+          <%# Price %>
+          <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Price:</h3>
+            </div>
+            <div class="col-5">
+              <h3><%= @sneaker.price %></h3>
+            </div>
+          </div>
+          <%# Size %>
+          <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Size:</h3>
+            </div>
+            <div class="col-5">
+              <h3><%= @sneaker.size %></h3>
+            </div>
+          </div>
+          <%# Description %>
+          <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Description:</h3>
+            </div>
+            <div class="col-6">
+              <span><h5>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </h5></span>
+            </div>
+          </div>
+          <%# Date %>
+          <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Date:</h3>
+            </div>
+            <div class="col-6">
+              <h4>26 June 2022, 0900am </h4>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div>
-    <div class="row">
-       <h2>Transaction No.: <%= @transaction.id %></h2>
-    </div>
 
+
+
+
+
+  <%# Transaction Successful page %>
+  <div class="container ">
     <div class="row">
       <div class="col-3">
-        <p>Description:</p>
-      </div>
-      <div class="col-6">
-        <p><%= @sneaker.brand %> <%= @sneaker.model %>, Size: <%= @sneaker.size %></p>
+        <img src="#" alt="carousel gallery">
       </div>
     </div>
+    <div>
+      <div class="row">
+        <h2>Transaction No.: <%= @transaction.id %></h2>
+      </div>
 
-    <div class="row">
-      <div class="col-3">
-        <p>Sneaker ID:</p>
+      <div class="row">
+        <div class="col-3">
+          <p>Description:</p>
+        </div>
+        <div class="col-6">
+          <p><%= @sneaker.brand %> <%= @sneaker.model %>, Size: <%= @sneaker.size %></p>
+        </div>
       </div>
-      <div class="col-6">
-        <p><%= @sneaker.id %></p>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-3">
-        <p>Price:</p>
+      <div class="row">
+        <div class="col-3">
+          <p>Sneaker ID:</p>
+        </div>
+        <div class="col-6">
+          <p><%= @sneaker.id %></p>
+        </div>
       </div>
-      <div class="col-6">
-        <p><%= @sneaker.price %></p>
-      </div>
-    </div>
 
-    <div class="row">
-       <%= link_to "My Collection", user_path(current_user) %>
+      <div class="row">
+        <div class="col-3">
+          <p>Price:</p>
+        </div>
+        <div class="col-6">
+          <p><%= @sneaker.price %></p>
+        </div>
+      </div>
+
+      <div class="row">
+        <%= link_to "My Collection", user_path(current_user) %>
+      </div>
     </div>
   </div>
+
 </div>
