added datetime to transactions migration file, controller and transaction details page

--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -8,6 +8,7 @@
   <div>
     <div class="row">
        <h2>Transaction No.: <%= @transaction.id %></h2>
+       <h4>Transaction Date.: <%= @transaction.date %></h4>
     </div>
 
     <div class="row">
