updated background for transaction page

--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <%# photo of transacted shoe %>
       <div class="col-6">
-        <img src="https://source.unsplash.com/NoVnXXmDNi0" alt="carousel gallery" height="100%" width="100%">
+        <img src="#" alt="carousel gallery" height="100%" width="100%">
       </div>
       <%# transaction details %>
       <div class="col-6">
