--- a/app/assets/stylesheets/components/_bg_card.scss
+++ b/app/assets/stylesheets/components/_bg_card.scss
@@ -36,7 +36,7 @@
   /* The image used */
   background-image:
   linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
-'https://source.unsplash.com/VbC-EiOTDqA');
+'https://source.unsplash.com/ezdrvzA1hZw');
 
   /* Full height */
   height: 100vh;
