--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -8,7 +8,7 @@
   <div>
     <div class="row">
        <h2>Transaction No.: <%= @transaction.id %></h2>
-       <h4>Transaction Date.: <%= @transaction.date %></h4>
+       <h4>Date/Time: <%= @transaction.datetime %></h4>
     </div>
 
     <div class="row">
