--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,10 +1,13 @@
+
+  <%# Transaction Successful page %>
 <div class="transaction-bg">
-  <div class="container">
+  <div class="container transaction-card">
     <div class="row">
       <%# photo of transacted shoe %>
-      <div class="col-6">
-        <img src="#" alt="carousel gallery" height="100%" width="100%">
-      </div>
+        <div class="col-6">
+          <%= image_tag "airjordon.png", alt: "Nike shoe", width: 400, height: 400 %>
+        </div>
+
       <%# transaction details %>
       <div class="col-6">
         <div class="container">
@@ -21,6 +24,15 @@
             </div>
             <div class="col-5">
               <h3><%= @sneaker.model %></h3>
+            </div>
+          </div>
+          <%# Sneaker id %>
+              <div class="row d-flex flex-start">
+            <div class="col-3">
+              <h3>Sneaker ID:</h3>
+            </div>
+            <div class="col-5">
+              <h3><%= @sneaker.id %></h3>
             </div>
           </div>
           <%# Price %>
@@ -61,58 +73,10 @@
               <h4>26 June 2022, 0900am </h4>
             </div>
           </div>
+          <div class="row">
+            <button class="b w-70"><%= link_to "My Collection", user_path(current_user) %></button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
-
-  <%# Transaction Successful page %>
-  <div class="container ">
-    <div class="row">
-      <div class="col-3">
-        <img src="#" alt="carousel gallery">
-      </div>
-    </div>
-    <div>
-      <div class="row">
-        <h2>Transaction No.: <%= @transaction.id %></h2>
-      </div>
-
-      <div class="row">
-        <div class="col-3">
-          <p>Description:</p>
-        </div>
-        <div class="col-6">
-          <p><%= @sneaker.brand %> <%= @sneaker.model %>, Size: <%= @sneaker.size %></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-3">
-          <p>Sneaker ID:</p>
-        </div>
-        <div class="col-6">
-          <p><%= @sneaker.id %></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-3">
-          <p>Price:</p>
-        </div>
-        <div class="col-6">
-          <p><%= @sneaker.price %></p>
-        </div>
-      </div>
-
-      <div class="row">
-        <%= link_to "My Collection", user_path(current_user) %>
-      </div>
-    </div>
-  </div>
-
-</div>
