--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -61,7 +61,7 @@
               <h3>Date:</h3>
             </div>
             <div class="col-6">
-              <h4>26 June 2022, 0900am </h4>
+              <h4><%= @transaction.created_at.strftime("%d/%m/%Y %H:%M") %></h4>
             </div>
           </div>
           <div class="row">
