--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,8 +1,8 @@
 
-  <%# Transaction Successful page %>
+<%# Transaction Successful page %>
 <div class="transaction-bg">
   <div class="container transaction-card">
-    <div class="row">
+    <div class="row p-2">
       <h2>Successful Transaction. Congrats!</h2>
     </div>
     <div class="row">
@@ -15,22 +15,22 @@
         <div class="container">
           <%# Transaction id %>
           <div class="row">
-            <div class="col-6">
+            <div class="col-12">
               <h2>Transaction No #: <%= @transaction.id %></h2>
             </div>
           </div>
           <%# Model %>
-           <div class="row d-flex flex-start">
+           <div class="row d-flex flex-start mt-3">
             <div class="col-3">
               <h3>Model:</h3>
             </div>
-            <div class="col-5">
+            <div class="col-8">
               <h3><%= @sneaker.model %></h3>
             </div>
           </div>
           <%# Sneaker id %>
-              <div class="row d-flex flex-start">
-            <div class="col-3">
+          <div class="row d-flex flex-start mt-4">
+            <div class="col-5">
               <h3>Sneaker ID:</h3>
             </div>
             <div class="col-5">
@@ -38,7 +38,7 @@
             </div>
           </div>
           <%# Price %>
-          <div class="row d-flex flex-start">
+          <div class="row d-flex flex-start mt-2">
             <div class="col-3">
               <h3>Price:</h3>
             </div>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <%# Size %>
-          <div class="row d-flex flex-start">
+          <div class="row d-flex flex-start mt-2">
             <div class="col-3">
               <h3>Size:</h3>
             </div>
@@ -56,11 +56,11 @@
             </div>
           </div>
           <%# Date %>
-          <div class="row d-flex flex-start">
+          <div class="row d-flex flex-start mt-2">
             <div class="col-3">
               <h3>Date:</h3>
             </div>
-            <div class="col-6">
+            <div class="col-9">
               <h4>26 June 2022, 0900am </h4>
             </div>
           </div>
