updated size of background for transaction page

--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -2,8 +2,8 @@
 <%# Transaction Successful page %>
 <div class="transaction-bg">
   <div class="container transaction-card">
-    <div class="row p-2">
-      <h2>Successful Transaction. Congrats!</h2>
+    <div class="row p-2 d-flex justify-content-center">
+      <h1>Transaction Successful</h1>
     </div>
     <div class="row">
       <%# photo of transacted shoe %>
