--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -23,6 +23,7 @@
       <h1><%= @sneaker.brand %></h1>
       <h2>$<%= @sneaker.price %></h2>
       <p><%= @sneaker.model %></p>
+      <p><%= @sneaker.description %></p>
       <p>Size <%= @sneaker.size %></p>
       <p>Owner: <%= @sneaker.user.first_name %></p>
       <%= link_to "Back To #{@sneaker.brand}", brand_sneakers_path(@sneaker.brand), class: "btn btn-gradient" %>
