--- a/app/views/sneakers/index.html.erb
+++ b/app/views/sneakers/index.html.erb
@@ -1,2 +1,57 @@
-<h1>Nike</h1>
-<%# <%= link_to "Sneaker Brands", brands_sneakers_path(@sneaker)%> %>
+<%# <%= link_to "Sneaker Brands", brands_sneakers_path(@sneaker)%>
+<div class="user-bg">
+  <h1 class="my-3">Sneakers</h1>
+
+  <div class="container brand-grid">
+  <% @sneaker.each do |sneaker| %>
+
+    <div class="container sneaker-card">
+      <%# row 1 - Brand Logo & Avator Logo %>
+      <div class="row d-flex justify-content-between">
+        <div class="col-2">
+          <%= image_tag "brand_logos/nike.png", alt: "Nike Logo", width: 40 %>
+        </div>
+
+        <div class="col-2" id="sneaker-card-avatar">
+          <img src="https://source.unsplash.com/LxVxPA1LOVM/60x60" alt="Avator Logo" class="avatar-bordered">
+        </div>
+      </div>
+    <%# Sneaker image %>
+      <div class="row mt-3">
+        <div class="col-3" id="sneaker-card-image">
+          <%= image_tag "airjordon.png", alt: "Nike shoe", width: 250, height: 200 %>
+        </div>
+      </div>
+
+    <%# Description %>
+      <div class="container">
+        <%# Model Name %>
+        <div class="row">
+          <div class="col-3 mt-3">
+            <h2><%= sneaker.model %></h2>
+          </div>
+        </div>
+        <%# Size and Price %>
+        <div class="row my-2 d-flex justify-content-between">
+          <div class="col-1">
+            <h3>Size: <%= sneaker.size %></h3>
+          </div>
+
+          <div class="col-2" id="sneaker-card-price" >
+            <h3>Price: $<%= sneaker.price %></h3>
+          </div>
+        </div>
+        <%# button %>
+        <div class="row">
+          <div class="col-6">
+            <button class="s-btn"><%= link_to "View Details", user_sneaker_path(sneaker.user, sneaker) %></button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <% end %>
+
+  </div>
+
+</div>
