--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
             <%= link_to "TRENDING", "#", class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "COLLECTIONS", "#", class: "nav-link" %>
+            <%= link_to "STORE", sneakers_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "SIGN UP", new_user_session_path, class: "nav-link" %>
