--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         <div class="col-9">
           <h1>SneakerHeads</h1>
           <h2 class="mt-3">The Place Where SneakerHeads Gather</h2>
-          <button class="b mt-5">LASTEST ARRIVALS</button>
+          <button class="b mt-5"><%= link_to "LASTEST ARRIVALS", sneakers_path %></button>
         </div>
       </div>
     </div>
