--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -111,6 +111,9 @@
   padding: 16px;
   border-radius: 16px;
   box-shadow: 16px;
+  position: relative;
+  top: 30px;
+
 }
 
 .transaction-card button {
