--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "STORE", sneakers_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "SIGN UP", new_user_session_path, class: "nav-link" %>
+            <%= link_to "SIGN UP", new_user_registration_path, class: "nav-link" %>
           </li>
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
