updated sneakers show page

--- a/app/views/sneakers/show.html.erb
+++ b/app/views/sneakers/show.html.erb
@@ -19,6 +19,7 @@
     </div>
   </div>
 
+<%# user_path(current_user) %>
     <div class="col-6">
       <h1><%= @sneaker.brand %></h1>
       <h2>$<%= @sneaker.price %></h2>
