--- a/app/assets/stylesheets/components/_bg_card.scss
+++ b/app/assets/stylesheets/components/_bg_card.scss
@@ -1,4 +1,5 @@
 .bg {
+  background-color: #1A1423;
   /* The image used */
   background-image:
   linear-gradient(45deg, rgba(161, 161, 146, 0.4), rgba(244, 238, 240, 0.3)), url(
