--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
       <div class="col-12 mt-3">
         <div class="d-flex justify-content-between">
           <h2>Rating</h2>
-          <button class="b"><%= link_to 'Reviews', "#" %></button>
+          <button class="b"><%= link_to 'Reviews', new_user_review_path(@user) %></button>
         </div>
       </div>
     </div>
